# auto_scan

./: .gitignore  DEBUG_TUTORIAL.md  DEVLOG.md  INSTALL.md  README.md  bbox_review.md  cli.py  plan.md  planCodex版.md  pyproject.toml  pyrightconfig.json  requirements.txt
.kilocode/rules/: codex.code-workspace  codex项目复刻与编程教学.md
docscan/: __main__.py  config.py  context.py  debug_utils.py  dewarp.py  enhance.py  geom_refine.py  io_utils.py  mask_utils.py  mcp_server.py  ocr_paddle.py  orientation.py  output_utils.py  page_split.py  pipeline.py  postproc.py  postprocess.py  preproc.py  runtime_utils.py  segment.py  segment_report.py  segment_strategy.py  split_module.py  summary_utils.py
examples/: README.md
scripts/: eval_mask_presets.py  review_bbox.py  run_batch.py  run_strategy_batch.py  smoke_test.py
